--- a/index.html
+++ b/index.html
@@ -307,10 +307,11 @@ h1, h2 {
       </div>
 
       <!-- END -->
-      <div style="height: 80px;"></div>
+      <div style="height: 80px;">
       <p>&ensp; &ensp; &ensp; &ensp; &ensp; &ensp; &ensp; Design by artsandtoys.</p>
       <br><br>
       <p>&ensp; &ensp; &ensp; &ensp; &ensp; &ensp; &ensp; <a href="#"><b><i>Fin.</i></b></a></p>
+      </div>
     </section>
 
   </div>
