--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 </p>
 
 <div style="height: 80px;"></div>
-<p>Design by artsandtoys.</p>
+<p>Template design by artsandtoys.</p>
 <br>
     <br>
 <p><a href="#"><b><i>Fin.</i></b></a></p>
