--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@ h1, h2 {
             <h2>Melodic Storyteller</h2>
 
             <div class="description-text">
-                Audio / Visual Artist and DJ
+                Audio / Visual Artist and Creator
             </div>
 
             <nav>
