--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@ h1, h2 {
     <div class="right-column-wrapper">
         <div id="splash-content" class="content-section">
             <div class="home-image-container">
-                <img src="images/19727191-FE50-4828-8076-5532C1E0355D.jpg" alt="Splash Image">
+                <img src="images/19727191-FE50-4828-8076-5532C1E0355D.jpg" alt="Splash Image" width="75%">
             </div>
         </div>
     </div>
