--- a/index.html
+++ b/index.html
@@ -293,8 +293,8 @@ h1, h2 {
 
             <nav>
                 <a href="about" class="nav-link" data-content-file="about.html">about &ensp;</a>
-                <a href="music" class="nav-link" data-content-file="catalog.html">catalog &ensp;</a>
-                <a href="photos" class="nav-link" data-content-file="gallery.html">memories &ensp;</a>
+                <a href="music" class="nav-link" data-content-file="catalog.html">music &ensp;</a>
+                <a href="photo" class="nav-link" data-content-file="gallery.html">snaps &ensp;</a>
             </nav>
         </div>
     </div>
