--- a/catalog.html
+++ b/catalog.html
@@ -8,19 +8,19 @@
         <a href="https://www.youtube.com/@PaulArthur" target="_blank" class="timeline-item-link">
             <div class="timeline-date"><i>2021 - </i></div>
             <div class="timeline-title">Featured on...</div>
-            <p style="color: #ddd;">For dance music lovers who like the chilled melodic sound, my first single “Daylight” is out now and featured on YoutubeMusic’s editorial playlist “<u>Chill EDM Hits</u>”.</p>
+            <p style="color: #ddd;">For dance music lovers who like the chilled melodic sound, my first single “Daylight” is out now and featured on YoutubeMusic’s editorial playlist “<B>Chill EDM Hits</B>”.</p>
         </a>
 
         <a href="#" class="timeline-item-link gallery-trigger" data-images="images/images/Daylight-Single-Cover-3k-NEW.png, images/0001-0096-3k-24fps.mp4">
             <div class="timeline-date">2021</div>
             <div class="timeline-title">Endless Bloom EP</div>
-            <p style="color: #ddd;">My goal with this project was to see if I could write and produce an electronic music project, craft 3D visuals that matched the aesthetic, package it, pitch it, and have a label distributor sign and release the project. Thank you to my partners @ Symphonic!</p>
+            <p style="color: #ddd;">My goal with this project was to see if I could write and produce an electronic music project, craft 3D visuals that matched the aesthetic, package it, pitch it, and have a label distributor sign and release the project. Thank you to my partners @ <B>Symphonic!</B></p>
         </a>
 
         <a href="#" class="timeline-item-link gallery-trigger" data-images="images/level-cybersprint++bw.png, images/level-cybersprint++.png">
             <div class="timeline-date">2020 - 2021</div>
             <div class="timeline-title">Oculus Launch Pad</div>
-            <p style="color: #ddd;">I was 1/100 up-and-coming VR developers & creators invited to participate in the 2020 class of Oculus Launch Pad.</p>
+            <p style="color: #ddd;">I was 1/100 up-and-coming VR developers & creators invited to participate in the 2020 class of <B>Oculus Launch Pad.</B></p>
         </a>
 
         <div id="columnPopup">
