--- a/catalog.html
+++ b/catalog.html
@@ -6,7 +6,7 @@
     <div class="timeline">
         
         <a href="https://www.youtube.com/@PaulArthur" target="_blank" class="timeline-item-link">
-            <div class="timeline-date"><i>2021 - </i></div>
+            <div class="timeline-date">2021 - </div>
             <div class="timeline-title">Featured on...</div>
             <p style="color: #ddd;">For dance music lovers who like the chilled melodic sound, my first single “Daylight” is out now and featured on YoutubeMusic’s editorial playlist “<B>Chill EDM Hits</B>”.</p>
         </a>
