--- a/about.html
+++ b/about.html
@@ -2,8 +2,8 @@
   
 <h2>about</h2>
   
-<p>I am an Audio / Visual Artist working at the intersection of technology and entertainment. <br>
-  
-</p>
+<p>I am an Audio / Visual Artist working at the intersection of technology and entertainment. <br> </p>
 
+<!-- picture here -->
+  
 </section>
