--- a/index.html
+++ b/index.html
@@ -305,7 +305,9 @@ h1, h2 {
         <div id="splash-content" class="content-section">
             <div class="home-image-container">
                <!-- code goes here -->
-                <img src="images/web_banner-djpaularthur-000.png" alt="Splash Image"> <br>
+                <img src="images/web_banner-djpaularthur-000.png" alt="Splash Image"> 
+                <br>
+                    <br>
                 <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/album/14elgy6sDwLV5qDdWUTJXE?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
             </div>
         </div>
