--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <a href="about" class="nav-link" data-content-file="about.html">about &ensp;</a>
                 <a href="music" class="nav-link" data-content-file="catalog.html">music &ensp;</a>
                 <a href="snaps" class="nav-link" data-content-file="gallery.html">snaps &ensp;</a>
-                <a href="tours" class="nav-link" data-content-file="touring.html">tours &ensp;</a>
+                <a href="tours" class="nav-link" data-content-file="schedule.html">tours &ensp;</a>
             </nav>
         </div>
     </div>
