--- a/gallery.html
+++ b/gallery.html
@@ -1,9 +1,49 @@
 <section id="about-me" class="content-section" >
   
 <h2>snaps</h2>
-  
-<p><i>Coming soon!</i> <br>
-  
-</p>
+
+<div class="row"> 
+    <div class="column">
+        <img src="/w3images/wedding.jpg" alt="Wedding" onclick="openModal(this)">
+        <img src="/w3images/rocks.jpg" alt="Rocks" onclick="openModal(this)">
+        <img src="/w3images/falls2.jpg" alt="Falls 2" onclick="openModal(this)">
+        <img src="/w3images/paris.jpg" alt="Paris" onclick="openModal(this)">
+        <img src="/w3images/nature.jpg" alt="Nature" onclick="openModal(this)">
+        <img src="/w3images/mist.jpg" alt="Mist" onclick="openModal(this)">
+        <img src="/w3images/paris.jpg" alt="Paris" onclick="openModal(this)">
+    </div>
+    <div class="column">
+        <img src="/w3images/underwater.jpg" alt="Underwater" onclick="openModal(this)">
+        <img src="/w3images/ocean.jpg" alt="Ocean" onclick="openModal(this)">
+        <img src="/w3images/wedding.jpg" alt="Wedding" onclick="openModal(this)">
+        <img src="/w3images/mountainskies.jpg" alt="Mountain Skies" onclick="openModal(this)">
+        <img src="/w3images/rocks.jpg" alt="Rocks" onclick="openModal(this)">
+        <img src="/w3images/underwater.jpg" alt="Underwater" onclick="openModal(this)">
+    </div>  
+    <div class="column">
+        <img src="/w3images/wedding.jpg" alt="Wedding" onclick="openModal(this)">
+        <img src="/w3images/rocks.jpg" alt="Rocks" onclick="openModal(this)">
+        <img src="/w3images/falls2.jpg" alt="Falls 2" onclick="openModal(this)">
+        <img src="/w3images/paris.jpg" alt="Paris" onclick="openModal(this)">
+        <img src="/w3images/nature.jpg" alt="Nature" onclick="openModal(this)">
+        <img src="/w3images/mist.jpg" alt="Mist" onclick="openModal(this)">
+        <img src="/w3images/paris.jpg" alt="Paris" onclick="openModal(this)">
+    </div>
+    <div class="column">
+        <img src="/w3images/underwater.jpg" alt="Underwater" onclick="openModal(this)">
+        <img src="/w3images/ocean.jpg" alt="Ocean" onclick="openModal(this)">
+        <img src="/w3images/wedding.jpg" alt="Wedding" onclick="openModal(this)">
+        <img src="/w3images/mountainskies.jpg" alt="Mountain Skies" onclick="openModal(this)">
+        <img src="/w3images/rocks.jpg" alt="Rocks" onclick="openModal(this)">
+        <img src="/w3images/underwater.jpg" alt="Underwater" onclick="openModal(this)">
+    </div>
+</div>
+
+<div id="myModal" class="modal">
+    <span class="close">&times;</span>
+    <img class="modal-content" id="img01">
+</div>
+
+<script src="gallery.js"></script>
 
 </section>
