--- a/about.html
+++ b/about.html
@@ -3,6 +3,9 @@ e<section id="about" class="content-section" >
 <h2>about</h2>
   
 <p>here lies my bio</p>
+<p>here lies my bio</p>
+<p>here lies my bio</p>
+<p>here lies my bio</p>
 <!-- picture here -->
   
 </section>
