--- a/snaps.html
+++ b/snaps.html
@@ -1,9 +1,8 @@
 <section id="snaps" class="content-section" >
   
 <h2>snaps</h2>
-  
-<p> </p>
-<!-- picture here -->
+
+<!-- pictures here -->
   
 </section>
 
