--- a/about.html
+++ b/about.html
@@ -4,12 +4,12 @@
   
 <p>An Afro / Indo Caribbean artist and composer born and raised in the global hub of Miami-Dade county, 
 Paul is known for blending the aesthetics of different genres of music with fun immersive experiences.</p>
-<p>Emerging from Miami’s vibrant club circuit, he became a regular in the rotation at iconic Miami Beach venues 
-like Mansion Nightclub and Louis Bar to Le Ciel in Switzerland, and has been featured as a DJ to go see in the Miami New Times.</p>
-<p>Drawing inspiration from multi-disciplinary creators like Pharrell, Tycho, and Deadmau5, Paul has 
-focused on building music that bridges live performance, original music, and the visual arts. </p>
-<p>His latest project, "Endless Bloom, has been featured on editorial playlists ranging from YouTubeMusic to Pandora.</p>
-<p>Stay tuned for the "Endless Nights" EP, a journey told through cocktails, dance music, and long nights out!</p>
+<p>Emerging from Miami’s vibrant club circuit, he became a regular in the rotation at iconic Miami venues like 
+Mansion Nightclub and Louis to Le Ciel in Switzerland, and has been featured as a DJ to go see in the New Times.</p>
+<p>Drawing inspiration from multi-disciplinary creators like Pharrell, Tycho, and Deadmau5, Paul has focused 
+on building music that bridges live performance, original music, and the visual arts. </p>
+<p>His latest project, "Endless Bloom, has been featured on editorial playlists from YouTubeMusic to Pandora.
+Stay tuned for the "Endless Nights" EP, a journey told through cocktails, dance music, and long nights out!</p>
   
 <!-- picture here -->
   
