--- a/about.html
+++ b/about.html
@@ -3,9 +3,8 @@
 <h2>about</h2>
   
 <p>An indo / afro caribbean artist and composer born and raised in the global hub of Miami-Dade county, 
-Paul is known for blending the aesthetics of different genres of music with fun immersive experiences.</p>
-<p>Emerging from Miami’s vibrant club circuit, he became a regular in the rotation at iconic Miami venues like 
-Mansion Nightclub, to overseas hotspot Le Ciel, and has been featured as a DJ to go see in the New Times.</p>
+Paul is known for blending the aesthetics and instrumentation of different genres of music with fun immersive experiences.</p>
+<p>Emerging from Miami’s vibrant club circuit, he became a regular in the rotation at iconic Miami venues like Mansion Nightclub, to overseas hotspot Le Ciel, and has been featured as a DJ to go see in the New Times.</p>
 <p>Drawing inspiration from multi-disciplinary creators like Pharrell, Tycho, and Deadmau5, Paul has focused 
 on building music that bridges live performance, original music, and the visual arts. </p>
 <p>His latest project, "Endless Bloom, has been featured on editorial playlists from YouTubeMusic to Pandora.
