--- a/snaps.html
+++ b/snaps.html
@@ -1,7 +1,7 @@
 <section id="snaps" class="content-section" >
   
 <h2>snaps</h2>
-
+<br>
 <!-- pictures here -->
 <div class="grid-container">
     <img src="images/Daylight-Single-Cover-3k-NEW.png" data-full-src="images/Daylight-Single-Cover-3k-NEW.png" alt="Image 1" onclick="openLightbox(this)">
@@ -10,7 +10,7 @@
 </div>
 
 <div id="lightbox" class="lightbox" onclick="closeLightbox()">
-    <span class="close-button">...</span>
+    <span class="close-button"></span>
     <img id="lightbox-image" class="lightbox-content" src="" alt="">
 </div>
   
