--- a/about.html
+++ b/about.html
@@ -17,6 +17,6 @@ Paul is known for his blending of different styles of music and instrumentation 
   
 <p>e-mail: <a href="mailto:paul@paularthurmusic.com"><b><i>paul@paularthurmusic.com</i></b></a></p>
 
-<p>socials <b><i>/djpaularthur</i></b></p>
+<p>socials: <b><i>/djpaularthur</i></b></p>
 
 </section>
