--- a/music.html
+++ b/music.html
@@ -7,11 +7,11 @@
 <p><b>NO GATEKEEPING</b><br>
 DAW: Logic Pro X. <br>
 Hardware: Univeral Audio Apollo Twin Duo. <br>
-Keyboard: Korg Nano Studio Keys, M-Audio Keystation 49 MK2, Williams Digital Piano. <br>
+Keyboard: Korg Nano Studio Keys, M-Audio Keystation 49 MK2, and Williams Digital Piano. <br>
 Monitors: Adam A7X & Sub8. Auralex acoustic room treatment. <br>
 Plug-in: Brainworks Bundle. Cableguys Kickstart & Volume Shaper. Eventide Blackhole. Fabfilter L1, L2, Saturn 2, Q3, Q4. Melda: Dynamic EQ. Valhalla Room. Xfer LFO Tools. Waves SSL Comp.<br>
 Software: Native Instruments Komplete Ultimate 12 (Big Up Heavocity Damage percussion & Galaxy Instruments The Gentleman upright piano. <br>
-V.I: 8dio Epic Percussion and Hybrid Tool 1. Cinematic Studio Strings Ensemble & Solo. Cinesamples Cinewinds & Cinebrass Core. and Drums of War. Embertone: Solo Woodwinds. ProjectSam: True Strike. Soundiron: Mercury & Olympus Micro. Spitfire Audio Albion One, Abbey Road One (they gifted me this). <br>
-VST: Korg. Sylenth. Xfer Serum. Robotic Bean Handclap. <br>
+V.I: 8dio Epic Percussion and Hybrid Tools 1. Cinematic Studio Strings & Solo Strings. Cinesamples Cinewinds & Cinebrass Core, and Drums of War. Embertone Solo Woodwinds. ProjectSam True Strike. Soundiron Mercury & Olympus Micro. Spitfire Audio Albion One & Abbey Road One (they gifted me this). <br>
+VST: Korg. Sylenth. Xfer Serum. Big Kick. Robotic Bean Handclap. <br>
 </p>
 </section>
