--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               <div class="timeline">
                     <a href="https://www.youtube.com/@PaulArthur" target="_blank" class="timeline-item-link">
                         <div class="timeline-date">2024 - </div>
-                        <div class="timeline-title">Joined Meta Horizon Start!</div>
+                        <div class="timeline-title">Joined Meta Start</div>
                         <p style="color: #ddd;">Porting my apps, games, and music experiences to Mixed Reality!</p>
                     </a>
                   
