--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
  
             <h2>recent</h2><br>
               <div class="timeline">
-                    <a href="https://www.youtube.com/@PaulArthur" target="_blank" class="timeline-item-link">
+                    <a href="" target="_blank" class="timeline-item-link">
                         <div class="timeline-date">2024 - </div>
                         <div class="timeline-title">Joined Meta Start</div>
                         <p style="color: #ddd;">Porting my apps, games, and music experiences to Mixed Reality!</p>
