--- a/about.html
+++ b/about.html
@@ -23,7 +23,9 @@ Paul is known for his blending of different styles of music and instrumentation 
 <p>social: <b><i>/djpaularthur</i></b></p>
 <br>
   <br>
-<p><i>design by: artsandtoys</i></p>
+    <br>
+      <br>
+<p><small><i>design by: artsandtoys</i></small>small></p>
 
 
 </section>
