--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
   
 <h2>about</h2>
   
-<p>An indo / afro caribbean artist and composer born and raised in the global hub of Miami-Dade county, 
+<p>An indo / afro caribbean artist and composer born and raised in Miami-Dade county, 
 Paul is known for his blending of different styles of music and instrumentation into playful experiences.</p>
 <p>Emerging from Miami’s club circuit, he became a regular in the rotation at iconic Miami venues like Mansion Nightclub, to overseas hotspots like Le Ciel, and featured as a DJ to go see in the New Times.</p>
 <p>Drawing inspiration from multi-disciplinary creators like Pharrell, Tycho, and Deadmau5, Paul has focused on building music that bridges live sets, original music, and immersive visual arts. </p>
