--- a/music.html
+++ b/music.html
@@ -6,5 +6,5 @@
  <br>
   <br>
 </p>
-<a href="https://hypeddit.com/xxe5zi">links</a>
+<!-- <a href="https://hypeddit.com/xxe5zi">links</a> -->
 </section>
