--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <h2>about</h2>
   
 <p>An indo / afro caribbean artist and composer born and raised in Miami-Dade county, 
-Paul is known for his blending of different styles of music and instrumentation into playful experiences.</p>
+Paul is known for his blending of different styles of music and instrumentation into sweaty experiences.</p>
 <p>Emerging from Miami’s club circuit, he became a regular in the rotation at celebrated Miami venues like Mansion Nightclub, to overseas hotspots like Le Ciel, and featured as a DJ to go see in the New Times.</p>
 <p>Drawing inspiration from multi-disciplinary creators like Pharrell, Tycho, and Deadmau5, Paul has focused on building music that bridges DJ sets with live instruments, original music, and immersive visuals. </p>
 <p>His lastest project, "Endless Bloom", is featured on editorial playlists from YouTube Music to Pandora to SXM.</p>
