--- a/snaps.html
+++ b/snaps.html
@@ -12,6 +12,10 @@
     <img src="images/chill_edm_hits.jpeg" data-full-src="images/chill_edm_hits.jpeg" alt="dj paul arthur chill music" onclick="openLightbox(this)">
     <img src="images/Daylight-Single-Cover-3k-NEW.png" data-full-src="images/Daylight-Single-Cover-3k-NEW.png" alt="dj paul arthur chill music" onclick="openLightbox(this)">   
 
+    <img src="images/gallery/paul_profile-sepia-hd.png" data-full-src="images/gallery/paul_profile-sepia-hd.png" alt="dj paul arthur chill music" onclick="openLightbox(this)">
+    <img src="images/gallery/artsandtoys_presents-paul_arthur.png" data-full-src="images/gallery/artsandtoys_presents-paul_arthur.png" alt="dj paul arthur chill music" onclick="openLightbox(this)">
+    <img src="images/gallery/paul_side-bw-hd.png" data-full-src="images/gallery/paul_side-bw-hd.png" alt="dj paul arthur chill music" onclick="openLightbox(this)">   
+  
     <img src="images/gallery/photo recaps/shots/10700149_754883191216327_7013900786887270852_o.jpg" data-full-src="images/gallery/photo recaps/shots/10700149_754883191216327_7013900786887270852_o.jpg" alt="dj paul arthur at " onclick="openLightbox(this)">   
     <img src="images/gallery/photo recaps/shots/10420251_754881091216537_73322010970019081_n.jpg" data-full-src="images/gallery/photo recaps/shots/10420251_754881091216537_73322010970019081_n.jpg" alt="dj paul arthur at " onclick="openLightbox(this)">   
     <img src="images/gallery/photo recaps/shots/10661722_754885481216098_4457731833301147864_o.jpg" data-full-src="images/gallery/photo recaps/shots/10661722_754885481216098_4457731833301147864_o.jpg" alt="dj paul arthur at " onclick="openLightbox(this)">   
