--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@ Paul is known for his blending of different styles of music and instrumentation 
 
 <h2>contact</h2>
   
-<p>e-mail: <a href="mailto:paul@paularthurmusic.com"><b style="color: rgb(173, 216, 230);">paul@paularthurmusic.com</b></a></p>
+<p>e-mail: <a href="mailto:paul@paularthurmusic.com"><b style="color: blue;">paul@paularthurmusic.com</b></a></p>
 
 <p >social: <b>/djpaularthur</b></p>
 <br>
